After 2-nd review

--- a/src/index.html
+++ b/src/index.html
@@ -130,10 +130,11 @@
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
             секунд)
           </h2>
-        <div class="article__item width-two-grids pad-left-seven-points">
-          <p class="article__item-title margin-bot-big decorated-text">
+          <h3 class="article__item-title margin-bot-big decorated-text">
             5 простых (на самом деле не очень) советов
-          </p>
+          </h3>
+        <article class="article__item width-two-grids pad-left-seven-points">
+
           <h4
             class="article__item-title article__item-title__thin-text decorated-text"
           >
@@ -149,8 +150,8 @@
             вернуться в настоящий момент, а не волноваться о потенциальных
             проблемах из будущего.
           </p>
-        </div>
-        <div class="article__item width-two-grids pad-left-seven-points">
+        </article>
+        <article class="article__item width-two-grids pad-left-seven-points">
           <h4
             class="article__item-title article__item-title__thin-text decorated-text"
           >
@@ -162,8 +163,8 @@
             Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
             попробовать включить плейлист в «белым шумом» или нейромузыкой.
           </p>
-        </div>
-        <div class="article__item width-two-grids pad-left-seven-points">
+        </article>
+        <article class="article__item width-two-grids pad-left-seven-points">
           <h4
             class="article__item-title article__item-title__thin-text decorated-text"
           >
@@ -178,8 +179,8 @@
             кислорода и он будет лучше работать. Но и простая двадцатиминутная
             прогулка — тоже отличный вариант.
           </p>
-        </div>
-        <div class="article__item width-two-grids pad-left-seven-points">
+        </article>
+        <article class="article__item width-two-grids pad-left-seven-points">
           <h4 class="article__item-title article__item-title__thin-text decorated-text">
             Хорошо ешьте
           </h4>
@@ -189,8 +190,8 @@
             высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
             фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
           </p>
-        </div>
-        <div class="article__item width-two-grids pad-left-seven-points">
+        </article>
+        <article class="article__item width-two-grids pad-left-seven-points">
           <h4
             class="article__item-title article__item-title__thin-text decorated-text"
           >
@@ -202,53 +203,53 @@
             секунд. А вот интересная книга способна затянуть и на несколько
             часов и круто тренирует направленное внимание.
           </p>
-        </div>
+        </article>
       </section>
 
       <section class="articles article_with_images">
         <h2 class="article__item-title width-full decorated-text margin-none">
           А можно в картинках?
         </h2>
-        <div class="article__item width_start-col_two-blocks">
+        <article class="article__item width_start-col_two-blocks">
           <img
             src="./images/sunset.png"
             alt="Закат в мультяшном стиле"
             class="color_images"
             loading="lazy"
           />
-        </div>
-        <div class="article__item height_two-blocks_col-end">
+        </article>
+        <article class="article__item height_two-blocks_col-end">
           <img
             src="./images/ice-cream.png"
             alt="Шарики мороженого в тарелке"
             class="color_images"
             loading="lazy"
           />
-        </div>
-        <div class="article__item height_two-blocks_col-start">
+        </article>
+        <article class="article__item height_two-blocks_col-start">
           <img
             src="./images/tape.png"
             alt="Аудиокассета в мультяшном стиле"
             class="color_images"
             loading="lazy"
           />
-        </div>
-        <div class="article__item">
+        </article>
+        <article class="article__item">
           <img
             src="./images/books.png"
             alt="Стопка книг с чашкой на них"
             class="color_images"
             loading="lazy"
           />
-        </div>
-        <div class="article__item width_two-blocks_col-mid">
+        </article>
+        <article class="article__item width_two-blocks_col-mid">
           <img
             src="./images/street.png"
             alt="Улица со зданиями по бокам в фиолетовых цветах"
             class="color_images"
             loading="lazy"
           />
-        </div>
+        </article>
       </section>
     </main>
 
