--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
-
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -56,7 +55,7 @@
     <main>
       <section class="articles">
         <h2 class="article__title">Почему сосредоточиться так сложно</h2>
-        <article class="article__item width-two-grids pad-left-seven-points">
+        <article class="article__item width-medium pad-left-add">
           <h3 class="article__item-title decorated-text">Многозадачность</h3>
           <p class="article__item-text">
             Особенно сложно сосредоточиться, когда задач много и все они —
@@ -70,7 +69,7 @@
             работаем невнимательно: ошибаемся и быстро устаём.
           </p>
         </article>
-        <article class="article__item width-two-grids pad-left-seven-points">
+        <article class="article__item width-medium pad-left-add">
           <h3 class="article__item-title decorated-text">Дофамин</h3>
           <p class="article__item-text">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
@@ -86,7 +85,7 @@
       </section>
 
       <section class="articles">
-        <h2 class="article__title margin-bot-small width-third-part width-full">
+        <h2 class="article__title margin-bot-small width-small width-full">
           Что снижает концентрацию внимания?
         </h2>
         <article class="article__item full-width_small-screen">
@@ -125,92 +124,87 @@
         </article>
       </section>
 
-      <section class="articles">
-          <h2 class="article__title">
-            Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
-            секунд)
-          </h2>
-          <h3 class="article__item-title margin-bot-big decorated-text">
+      <section class="articles_how">
+        <h2 class="articles_how__title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+        <div class="wrap_articles">
+          <h3
+            class="decorated-text articles_how__title articles_how__title-decor"
+          >
             5 простых (на самом деле не очень) советов
           </h3>
-        <article class="article__item width-two-grids pad-left-seven-points">
-
-          <h4
-            class="article__item-title article__item-title__thin-text decorated-text"
-          >
-            Представьте небо и облака
-          </h4>
-          <p class="article__item-text">
-            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-            успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
-            раз и мешают эти сложные задачи делать. В такие моменты можно
-            закрыть глаза и представить, что чистое небо — это вы, а облака —
-            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
-            где-то там, за тучами, и никуда не денется. Это упражнение поможет
-            вернуться в настоящий момент, а не волноваться о потенциальных
-            проблемах из будущего.
-          </p>
-        </article>
-        <article class="article__item width-two-grids pad-left-seven-points">
-          <h4
-            class="article__item-title article__item-title__thin-text decorated-text"
-          >
-            Включите музыку
-          </h4>
-          <p class="article__item-text">
-            Но не любую, и не любимую. Любимая может быть связана с сильными
-            положительными эмоциями, которые тоже очень сильно отвлекают.
-            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
-            попробовать включить плейлист в «белым шумом» или нейромузыкой.
-          </p>
-        </article>
-        <article class="article__item width-two-grids pad-left-seven-points">
-          <h4
-            class="article__item-title article__item-title__thin-text decorated-text"
-          >
-            Прогуляйтесь
-          </h4>
-          <p class="article__item-text">
-            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-            <a href="#" class="anchor-text">показал</a>, что созерцание природы
-            повышает концентрацию, в то время как после просмотра городских
-            пейзажей она наоборот понижается. Можно совместить прогулку с
-            физическими упражнениями или бегом — так в мозг поступит ещё больше
-            кислорода и он будет лучше работать. Но и простая двадцатиминутная
-            прогулка — тоже отличный вариант.
-          </p>
-        </article>
-        <article class="article__item width-two-grids pad-left-seven-points">
-          <h4 class="article__item-title article__item-title__thin-text decorated-text">
-            Хорошо ешьте
-          </h4>
-          <p class="article__item-text">
-            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
-            которые препятствуют резким скачкам сахара в крови. Например, с
-            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
-            фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-          </p>
-        </article>
-        <article class="article__item width-two-grids pad-left-seven-points">
-          <h4
-            class="article__item-title article__item-title__thin-text decorated-text"
-          >
-            Читайте
-          </h4>
-          <p class="article__item-text">
-            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
-            прочитать пост в соцсети, достаточно нескольких минут или даже
-            секунд. А вот интересная книга способна затянуть и на несколько
-            часов и круто тренирует направленное внимание.
-          </p>
-        </article>
+          <article class="articles_how__article">
+            <h4 class="decorated-text articles_how__article__title">
+              Представьте небо и облака
+            </h4>
+            <p class="article__item-text">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
+            </p>
+          </article>
+          <article class="articles_how__article">
+            <h4
+              class="decorated-text articles_how__article articles_how__article__title"
+            >
+              Включите музыку
+            </h4>
+            <p class="article__item-text">
+              Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист в «белым шумом» или нейромузыкой.
+            </p>
+          </article>
+          <article class="articles_how__article">
+            <h4 class="decorated-text articles_how__article__title">
+              Прогуляйтесь
+            </h4>
+            <p class="article__item-text">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+              <a href="#" class="anchor-text">показал</a>, что созерцание
+              природы повышает концентрацию, в то время как после просмотра
+              городских пейзажей она наоборот понижается. Можно совместить
+              прогулку с физическими упражнениями или бегом — так в мозг
+              поступит ещё больше кислорода и он будет лучше работать. Но и
+              простая двадцатиминутная прогулка — тоже отличный вариант.
+            </p>
+          </article>
+          <article class="articles_how__article">
+            <h4 class="decorated-text articles_how__article__title">
+              Хорошо ешьте
+            </h4>
+            <p class="article__item-text">
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+          </article>
+          <article class="articles_how__article">
+            <h4 class="decorated-text articles_how__article__title">Читайте</h4>
+            <p class="article__item-text">
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
+            </p>
+          </article>
+        </div>
       </section>
 
       <section class="articles article_with_images">
         <h2 class="article__item-title width-full decorated-text margin-none">
           А можно в картинках?
         </h2>
-        <article class="article__item width_start-col_two-blocks">
+        <article class="article__item width-medium_col-start">
           <img
             src="./images/sunset.png"
             alt="Закат в мультяшном стиле"
@@ -218,7 +212,7 @@
             loading="lazy"
           />
         </article>
-        <article class="article__item height_two-blocks_col-end">
+        <article class="article__item height-medium_col-end">
           <img
             src="./images/ice-cream.png"
             alt="Шарики мороженого в тарелке"
@@ -226,7 +220,7 @@
             loading="lazy"
           />
         </article>
-        <article class="article__item height_two-blocks_col-start">
+        <article class="article__item height-medium_col-start">
           <img
             src="./images/tape.png"
             alt="Аудиокассета в мультяшном стиле"
@@ -242,7 +236,7 @@
             loading="lazy"
           />
         </article>
-        <article class="article__item width_two-blocks_col-mid">
+        <article class="article__item width-medium_col-mid">
           <img
             src="./images/street.png"
             alt="Улица со зданиями по бокам в фиолетовых цветах"
